--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -88,7 +88,7 @@
             transform: scale(1.1);
         }
 
-        @include respond($bp-md) {
+        @include respond(bp-md) {
             display: none !important;
         }
     }
